--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-    <h1>“Hello World, we are software developers!”</h1>
+    <header id="main">
+      <h1 id="title">Steve jobs</h1>
+    </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
