--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
     <header id="main">
       <h1 id="title">Steve jobs</h1>
     </header>
+ <div id="img-div">
+   image
+   <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="photo" />
+ </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
