--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
  <div id="img-div">
    image
    <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="photo" />
- </div>
+<a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">text</a>
+ 
+  </div>
 
 
 
