--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Oksana & Vipul : Tribute Page (Steve Jobs)</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -11,8 +11,7 @@
       <h1 id="title">Steve jobs</h1>
     </header>
  <div id="img-div">
-   image
-   <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="photo" />
+   <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/Steve_Jobs_presents_iPhone.jpg/1024px-Steve_Jobs_presents_iPhone.jpg" alt="Steven P. Jobs present Apple's phone : the iPhone" />
  </div>
 
 
