--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
  <div id="img-div">
    <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/Steve_Jobs_presents_iPhone.jpg/1024px-Steve_Jobs_presents_iPhone.jpg" alt="Steven P. Jobs present Apple's phone : the iPhone" /><br>
-  <span id="img-caption">MacWorld Conference & Expo 2007 - San Francisco Steven P. Jobs present Apple's phone : the iPhone</span>
+  <span style="text-align: " id="img-caption">MacWorld Conference & Expo 2007 - San Francisco Steven P. Jobs present Apple's phone : the iPhone</span>
   </div>
 
   <section id="tribute-info">
@@ -20,14 +20,14 @@
     <ul>
       <li><strong>1976</strong>: Wozniak designed and developed the Apple I computer and showed it to Jobs, who suggested that they sell it. That same year, Jobs, Wozniak, and administrative supervisor Ronald Wayne founded Apple Computer (now called Apple Inc.) in the garage of Jobs's Los Altos home on Crist Drive.</li>
       <li><strong>1984</strong>: Apple introduced the Macintosh, which was based on The Lisa (and Xerox PARC's mouse-driven graphical user interface) and conceived by early Apple employee Jef Raskin.</li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><strong>2005</strong>:  Bob Iger replaced Eisner at Disney, and Iger quickly worked to mend relations with Jobs and Pixar. On January 24, 2006, Jobs and Iger announced that Disney had agreed to purchase Pixar in an all-stock transaction worth $7.4 billion. When the deal closed, Jobs became The Walt Disney Company's largest single shareholder with approximately seven percent of the company's stock.</li>
+      <li><strong>2008</strong>: Apple announced that marketing vice-president Phil Schiller would deliver the company's final keynote address at the Macworld Conference and Expo 2009, again reviving questions about Jobs's health.[138][139] In a statement given on January 5, 2009, on Apple.com, Jobs said that he had been suffering from a "hormone imbalance" for several months.</li>
+      <li><strong>2011</strong>: Jobs announced his leave in a letter to employees, stating his decision was made "so he could focus on his health". As it did at the time of his 2009 medical leave, Apple announced that Tim Cook would run day-to-day operations and that Jobs would continue to be involved in major strategic decisions at the company.</li>
     </ul>
   </section>
 
   <footer>
-      <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">text</a>
+      <p>Wanted to know more about Jobs :<a id="tribute-link" href="https://en.wikipedia.org/wiki/Steve_Jobs" target="_blank">Click Here</a></p>
   </footer>
 
 
