--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
  <div id="img-div">
    <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/Steve_Jobs_presents_iPhone.jpg/1024px-Steve_Jobs_presents_iPhone.jpg" alt="Steven P. Jobs present Apple's phone : the iPhone" /><br>
-  <span id="img-caption">MacWorld Conference & Expo 2007 - San Francisco Steven P. Jobs present Apple's phone : the iPhone</span>
+  <p id="img-caption">MacWorld Conference & Expo 2007 - San Francisco Steven P. Jobs present Apple's phone : the iPhone</p>
   </div>
 
   <section id="tribute-info">
